--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "localStorage": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "recharts": "^2.0.9",
