--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "short_name": "hammouda's room",
-  "name": "hamouda's room",
+  "short_name": "Leoni Menzel Hayet",
+  "name": "Leoni Menzel Hayet",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo512.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "192x192"
     },
