--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material/image-list": "^12.0.0",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -19,11 +20,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-native-paper": "^4.9.2",
+    "react-native-vector-icons": "^9.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "recharts": "^2.0.9",
     "redux": "^4.1.1",
     "serviceworker": "^0.1.7",
+    "styled-components": "^5.3.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.1"
   },
