--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "browserslist": "^4.18.1",
+    "caniuse-lite": "^1.0.30001283",
     "cors": "^2.8.5",
     "js-cookie": "^2.2.1",
     "localStorage": "^1.0.4",
