--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserslist": "^4.18.1",
     "caniuse-lite": "^1.0.30001283",
     "cors": "^2.8.5",
+    "get-ideal-package-tree": "^2.0.0",
     "js-cookie": "^2.2.1",
     "localStorage": "^1.0.4",
     "react": "^17.0.2",
@@ -25,7 +26,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-vector-icons": "^9.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "recharts": "^2.0.9",
     "redux": "^4.1.1",
     "serviceworker": "^0.1.7",
