--- a/package.json
+++ b/package.json
@@ -26,13 +26,11 @@
     "react-native-paper": "^4.9.2",
     "react-native-vector-icons": "^9.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^3.0.1",
     "recharts": "^2.0.9",
     "redux": "^4.1.1",
     "serviceworker": "^0.1.7",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.3.2",
-    "web-vitals": "^1.1.1"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
